examples/test/testpolicy13300.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13300
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key46: value1
      key4: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value25
          key1: value21
          key30: value32
      podSelector:
        matchLabels:
          key38: value24
          key42: value23
          key31: value32
